--- a/productos-api-dev.properties
+++ b/productos-api-dev.properties
@@ -1,4 +1,4 @@
-product.property=Product Dev
+product.property=productos-api
 spring.datasource.url=jdbc:mysql://localhost:3306/tiendaapi?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=mysqladmin
