--- a/productos-api-dev.properties
+++ b/productos-api-dev.properties
@@ -1,2 +1,2 @@
 product.property=productos-api
-spring.datasource.url=jdbc:mysql://localhost:3306/tiendaapi?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/tiendaapi?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
